# text2sql_w_mcp

./: .env  .gitignore  README.md  client.py  database.db  pyproject.toml
data/expected/: prods_by_category.csv  sales_summary_month.csv  top_customers_by_spend.csv
data/raw/: customers.csv  employees.csv  order_items.csv  orders.csv  products.csv  suppliers.csv
faiss_index_schema/: index.faiss  index.pkl
src/: app.py  run.py  server.py
src/client/: chat.py  client.py  config.py  interfaces.py  llm_model.py  model.py  processors.py  session.py  tool_executor.py  types.py
src/config/: logger.py
src/main/: server.py
src/scripts/: embed_schema.py  population.py
src/tests/: conftest.py  run_tests.py  test_complex_queries.py  test_create.py  test_db_ops.py  test_insert.py
