[project]
name = "text2sql-w-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52.0",
    "faiss-cpu>=1.11.0",
    "google-genai>=1.18.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "instructor[claude]>=1.8.3",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-google-genai>=2.0.10",
    "mcp[cli]>=1.9.1",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "structlog>=25.3.0",
]
